[package]
name = "libbf"
version = "0.0.3"
authors = ["yoh2 <yoh2.sdj@gmail.com>"]
edition = "2021"
description = "Brainfuck-like language library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
all = ["predefined"]
predefined = ["bf", "ook"]
bf = []
ook = []

[dependencies]
thiserror = "1.0"
