[package]
name = "libbf"
version = "0.0.3"
authors = ["yoh2 <yoh2.sdj@gmail.com>"]
edition = "2021"
description = "Brainfuck-like language library"
license = "MIT"
licence-file = "LICENSE"
readme = "README.md"
keyword = ["brainfuck"]
repository = "https://github.com/yoh2/libbf-rs"

[features]
default = []
all = ["predefined"]
predefined = ["bf", "ook"]
bf = []
ook = []

[dependencies]
thiserror = "1.0"
